--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-popup-alert",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "description": "Alert popup for ReactJS",
   "author": "jakobinn",
   "license": "MIT",
@@ -15,10 +15,11 @@
     "build": "microbundle-crl --no-compress --css-modules false --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --css-modules false --format modern,cjs",
     "prepare": "run-s build",
+    "publish": "run-s test && npm run build && npm publish",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
-    "test:lint": "eslint .",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:lint": "eslint ./src/index.tsx",
+    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --watchAll=false --coverage",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
@@ -29,7 +30,9 @@
     "confirm",
     "dialog",
     "error",
-    "message"
+    "message",
+    "reactjs",
+    "react"
   ],
   "peerDependencies": {
     "react": "^16.0.0"
@@ -38,14 +41,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/chai": "^4.2.14",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.1.4",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "babel-eslint": "^10.0.3",
+    "chai": "^4.2.0",
     "cross-env": "^7.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
@@ -68,5 +78,8 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "jest-coverage-badges": "^1.1.2"
+  }
 }
