--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-popup-alert",
-  "version": "1.0.7",
+  "version": "2.0.0",
   "description": "Alert popup for ReactJS",
   "author": "jakobinn",
   "license": "MIT",
@@ -11,6 +11,13 @@
   "engines": {
     "node": ">=10"
   },
+  "jest": {
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ]
+  },
   "scripts": {
     "build": "microbundle-crl --no-compress --css-modules false --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --css-modules false --format modern,cjs",
@@ -19,7 +26,7 @@
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
     "test:lint": "eslint ./src/index.tsx",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --watchAll=false --coverage",
+    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --watchAll=false --coverage && jest-coverage-badges",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
@@ -45,9 +52,11 @@
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.1.4",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
+    "@types/sinon": "^9.0.10",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
@@ -74,6 +83,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
+    "simulant": "^0.2.2",
+    "sinon": "^9.2.4",
     "typescript": "^3.7.5"
   },
   "files": [
